<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="result">0.0</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="multiplyButton">*</string>
    <string name="divisionButton">/</string>
    <string name="clearButton">CLR</string>
   <string name="equalButton">=</string>
    <string name="capButton">^</string>
    <string name="modButton">%</string>
    <string name="dotButton">.</string>
    <string name="delButton">DEL</string>
    <string name="zeroButton">0</string>

</resources>
